# desksearch

./: .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  REWRITE_PLAN.md  SLOT1_RESULTS.md  SLOT2_RESULTS.md  conftest.py  desksearch-backend.spec  desksearch.spec  docker-entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml
benchmarks/: benchmark.py  comparison.md  index_benchmark.py  results.json  results.md  search_benchmark.py
docs/: DESIGN_DECISIONS.md  PLUGINS.md
electron/: build-config.js  main.js  package-lock.json  package.json  preload.js
electron/assets/: icon.icns
rust/: Cargo.toml
rust/desksearch-core/: Cargo.toml
rust/desksearch-core/src/: bm25.rs  embed.rs  fusion.rs  lib.rs  onnx_embed.rs  search.rs  snippets.rs  vector.rs
rust/desksearch-indexer/: Cargo.toml
rust/desksearch-indexer/src/: chunker.rs  lib.rs  store.rs  walker.rs
rust/desksearch-indexer/src/parsers/: docx.rs  html.rs  mod.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
rust/desksearch-server/: Cargo.toml
rust/desksearch-server/src/: config.rs  frontend.rs  main.rs  state.rs  watcher.rs
rust/desksearch-server/src/routes/: dashboard.rs  folders.rs  health.rs  index.rs  mod.rs  search.rs  settings.rs  status.rs
scripts/: build-app.sh  build.sh  embed_server.py  export_onnx.py
src/desksearch/: __init__.py  __main__.py  _sdk.py  config.py  onboarding.py
src/desksearch/api/: connectors.py  integrations.py  routes.py  schemas.py  server.py
src/desksearch/connectors/: __init__.py  base.py  chrome_bookmarks.py  email_mbox.py  local_files.py  registry.py  slack_export.py
src/desksearch/core/: __init__.py  analytics.py  bm25.py  collections.py  dense.py  fusion.py  nlsearch.py  search.py  snippets.py
src/desksearch/daemon/: __init__.py  autostart.py  service.py  tray.py
src/desksearch/indexer/: __init__.py  chunker.py  embedder.py  parsers.py  pipeline.py  store.py  watcher.py
src/desksearch/plugins/: __init__.py  base.py  loader.py  registry.py
src/desksearch/plugins/builtin/: __init__.py  browser_bookmarks.py  clipboard_monitor.py  email_connector.py  local_files.py  slack_export.py
src/desksearch/ui_dist/: index.html  manifest.json  sw.js
src/desksearch/ui_dist/assets/: AnalyticsDashboard-4dKOxDUP.js  AnalyticsDashboard-CXC-lmjH.js  AnalyticsDashboard-Cy-H5Cva.js  AnalyticsDashboard-D1ZHFiN3.js  AnalyticsDashboard-D5vj07pu.js  AnalyticsDashboard-DMcFJbYP.js  AnalyticsDashboard-DzNgktjP.js  Dashboard-Bgwq4zjo.js  Dashboard-C55VOLC6.js  Dashboard-CjkJdaHy.js  Dashboard-D8GcjsoL.js  Dashboard-MCk_JkVj.js  Dashboard-OoW5oxs6.js  Dashboard-oNorTj2_.js  DataSources-B4RPVVlF.js  DataSources-Bui6entW.js  DataSources-BxV8f5XR.js  DataSources-C6yhKliL.js  DataSources-Co-Hq-xq.js  DataSources-Cz0xF7sh.js  DuplicatesPanel-B2EZDajZ.js  DuplicatesPanel-B2lNpHnN.js  DuplicatesPanel-BCoNaZ4Y.js  DuplicatesPanel-BTiMt_r7.js  DuplicatesPanel-BowyetwN.js  DuplicatesPanel-D1I3QVla.js  DuplicatesPanel-Dbwh4bue.js  FileExplorer-BgxGagFl.js  FileExplorer-DQvH-beG.js  FileExplorer-DUeRjT2f.js  FileExplorer-DbNDQ08S.js  FileExplorer-DkoMwY9m.js  FileExplorer-DnfDkAWW.js  FileExplorer-s4uWAtx9.js  FolderManager--KLL0vDT.js  FolderManager-BCMD0dS0.js  FolderManager-Cu0tIE_h.js  FolderManager-DqZKOyZq.js  FolderManager-DrixI5xQ.js  FolderManager-JxvDd_F-.js  (+29 more)
src/desksearch/utils/: memory.py
src/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/ui/public/: sw.js
src/ui/src/: App.tsx  config.ts  types.ts
src/ui/src/components/: AnalyticsDashboard.tsx  Dashboard.tsx  DataSources.tsx  DocumentPreviewPanel.tsx  DuplicatesPanel.tsx  FileExplorer.tsx  Filters.tsx  FolderManager.tsx  IndexingProgress.tsx  IntegrationsPanel.tsx  NLAnswerBanner.tsx  Onboarding.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx  StatusBar.tsx  TopicsPanel.tsx
src/ui/src/hooks/: useIndexStatus.ts  useSearch.ts
src/ui/src/styles/: globals.css
tests/: conftest_api.py  test_api.py  test_cli.py  test_connectors.py  test_connectors_v2.py  test_indexer.py  test_integration.py  test_integrations_api.py  test_new_features.py  test_robustness.py  test_search.py  test_search_features.py  test_watcher.py
