[workspace]
resolver = "2"
members = [
    "desksearch-core",
    "desksearch-indexer",
    "desksearch-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Shuai Wang <shuai.wang@uq.edu.au>"]

[workspace.dependencies]
# Search
tantivy = "0.22"
usearch = { version = "2", default-features = false, features = ["fp16lib"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Parallelism
rayon = "1"

# Workspace crates
desksearch-core = { path = "desksearch-core" }
desksearch-indexer = { path = "desksearch-indexer" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
