[package]
name = "desksearch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core search engine for DeskSearch — BM25, dense, fusion, snippets"

[dependencies]
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
rusqlite.workspace = true

# Dense vector search
usearch.workspace = true

# Snippet extraction
regex = "1"
aho-corasick = "1"

# ONNX embedding
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = true }

[dev-dependencies]
tempfile = "3"
